home horizontal scrollbar problem solved, video added, students page css modified

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,7 +4,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 30em;
-    /* margin: -2em; */
 }
 
 .course-container {
@@ -14,7 +13,6 @@
 
 .course_block {
     background-color: lightgray;
-    /* box-shadow: 12px 0px 81px 0px rgba(0, 0, 0, 0.75); */
     text-align: center;
 }
 
@@ -45,6 +43,12 @@
     padding: 1em;
 }
 
+.humber {
+    width: 40%;
+    height: 30em;
+    margin: 1em 2em;
+}
+
 
 /* Tablet */
 
@@ -65,6 +69,11 @@
         margin: 1em;
         padding: 1em;
     }
+    .humber {
+        width: 60%;
+        height: 30em;
+        margin: 1em 5em;
+    }
 }
 
 
@@ -77,7 +86,6 @@
         background-size: cover;
         background-repeat: no-repeat;
         height: 50em;
-        /* margin: -2em; */
     }
     .course-container {
         grid-template-columns: 1fr 1fr 1fr;
@@ -87,19 +95,21 @@
     }
     .course_block {
         background-color: lightgray;
-        /* box-shadow: 12px 29px 81px 0px rgba(0, 0, 0, 0.75); */
         text-align: center;
-        /* min-width: 28em; */
     }
     .courseimg {
         min-width: 28em;
         min-height: 18em;
     }
     .quote {
-        /* width: 100%; */
         line-height: 1em;
         font-size: 2em;
         margin: 1em;
         padding: 1em;
+    }
+    .humber {
+        width: 80%;
+        height: 50em;
+        margin: 1em 12em;
     }
 }
