--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .heading {
     margin: 0;
     padding: 0;
@@ -56,11 +61,11 @@
     display: block;
     background-color: rgb(19, 21, 22);
     color: white;
-    padding: 2em;
+    /* padding: 2em; */
 }
 
 .footer-area .explore {
-    padding-right: 13em;
+    /* padding-right: 13em; */
     display: grid;
     grid-template-columns: 1fr;
     /* margin-left: 2em; */
@@ -118,7 +123,7 @@
     .heading {
         margin: 0;
         padding: 0;
-        width: 100%;
+        /* width: 100%; */
         /* height : 18vh; */
         background-color: rgb(240, 243, 248);
         border-top: 0.1rem solid rgb(217, 222, 228);
@@ -211,7 +216,7 @@
     .heading {
         margin: 0;
         padding: 0;
-        width: 100%;
+        /* width: 100%; */
         /* height : 18vh; */
         background-color: rgb(240, 243, 248);
         border-top: 0.1rem solid rgb(217, 222, 228);
@@ -251,7 +256,7 @@
         text-decoration: underline;
     }
     .footer-area {
-        width: 100%;
+        /* width: 100%; */
         display: block;
         background-color: rgb(19, 21, 22);
         color: white;
